--- a/style.css
+++ b/style.css
@@ -11,7 +11,10 @@ body {
   background: #fff;
 }
 
-.nav, .banner, .gridd, .carrd {
+.nav,
+.banner, 
+.gridd,
+.carrd {
   display: none;
 }
 
@@ -289,7 +292,7 @@ h3 {
   margin-bottom: 20px;
 }
 
-  .text {
+.text {
   font-family: "Poppins", Helvetica, Arial, Verdana, Tahoma, sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -468,7 +471,9 @@ input {
 }
 
 @media (min-width: 768px) {
-  .header, .imgdiv, .card {
+  .header,
+  .imgdiv, 
+  .card {
     display: none;
   }
 
@@ -487,7 +492,7 @@ input {
   }
 
   .nav .logo {
-    color: #6070FF;
+    color: #6070ff;
     font-weight: 700;
     font-size: 18px;
     text-decoration: none;
@@ -526,7 +531,7 @@ input {
     background: url(./assets/Headerbgdesktop.png);
     background-size: cover;
     animation: slideInFromTop 1s ease-in;
-  } 
+  }
 
   .banner .content {
     width: 90%;
@@ -541,8 +546,9 @@ input {
     font-size: 48px;
     line-height: 60px;
     letter-spacing: 0.37px;
-    color: #091E42;
+    color: #091e42;
   }
+
   .banner .content p {
     font-family: "Poppins", Helvetica, Arial, Verdana, Tahoma, sans-serif;
     font-style: normal;
