--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
 
 body {
-  max-width: 375px;
   background: #fff;
+}
+
+.header1, .navigation {
+  display: none;
 }
 
 .header {
@@ -462,4 +465,39 @@ input {
   box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
   color: #fff;
   background-color: #6070ff;
+}
+
+@media (min-width: 768px) {
+  .header, .iconn {
+    display: none;
+  }
+  
+  .header1 {
+    top: 0;
+    left: 0;
+    width: 80%;
+    padding: 40px 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .header1 .navigation {
+    position: relative;
+    display: flex;
+  }
+  .header1 .navigation li {
+    list-style: none;
+    margin-left: 30px;
+  }
+  .header1 .navigation li a {
+    text-decoration: none;
+    font-family: "Poppins", Helvetica, Arial, Verdana, Tahoma, sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 15px;
+    line-height: 20px;
+    color: #344563;
+  } 
+
 }
