--- a/style.css
+++ b/style.css
@@ -126,9 +126,6 @@ main {
   justify-content: center;
   align-items: center;
   margin-bottom: 12px;
-}
-
-.bg {
   display: block;
 }
 
@@ -139,7 +136,6 @@ main {
 .title {
   max-width: 90%;
   padding-top: 0;
-  /* padding-bottom: 12px; */
   margin-bottom: 10px;
   margin-top: 0;
 }
@@ -214,7 +210,6 @@ main {
   display: flex;
   justify-content: flex-start;
   margin-left: -40px;
-  /* margin-top: -70px; */
 }
 
 .lang1 {
@@ -515,37 +510,35 @@ input {
     padding-right: 130px;
 }
 
-header {
-  width: 1220px;
-  padding: 40px 50px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
+  header {
+    width: 1220px;
+    padding: 40px 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
-header .navigation {
-  position: relative;
-  display: flex;
-}
+  header .navigation {
+    position: relative;
+    display: flex;
+  }
 
-
-header .navigation li {
+  header .navigation li {
   list-style: none;
   margin-left: 30px;
-}
+  }
 
-header .navigation li a {
-font-family: "Poppins", Helvetica, Arial, Verdana, Tahoma, sans-serif;
-font-style: normal;
-font-weight: 500;
-font-size: 15px;
-line-height: 20px;
-margin-left: 30px;
-color: #344563;
-text-decoration: none;
-}
-
-
+  header .navigation li a {
+    font-family: "Poppins", Helvetica, Arial, Verdana, Tahoma, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 20px;
+    margin-left: 30px;
+    color: #344563;
+    text-decoration: none;
+  }
+ 
   .hamburger {
     display: none;
   }
@@ -616,7 +609,7 @@ text-decoration: none;
     width: 100%;
     height: 100%;
   }
-  
+
   .card-child-img {
     width: 49%;
   }
@@ -647,12 +640,12 @@ text-decoration: none;
 
   .languages-box {
     display: none;
-    justify-content: flex-start
+    justify-content: flex-start;
   }
 
   .languages-box-desktop {
     display: flex;
-    justify-content: flex-start
+    justify-content: flex-start;
   }
 
   .languages section .flex {
@@ -735,16 +728,15 @@ text-decoration: none;
   .form-field {
     width: 100%;
   }
- 
-@keyframes slideInFromTop {
-  0% {
+
+  @keyframes slideInFromTop {
+    0% {
       transform: translateY(-100%);
-  }
+    }
 
-  100% {
+    100% {
       transform: translateX(0);
+    }
   }
-}
-
 
 }
