--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 .header {
   display: flex;
   justify-content: space-between;
-  width: 80%;
+  /* width: 80%; */
   background: #fff;
   margin: 10px;
 }
@@ -28,8 +28,60 @@ body {
   color: #6070ff;
 }
 
+header .navigation {
+  display: none;
+}
+
+header .navigate {
+  display: none;
+}
+
+header .navigate.active {
+  width: 100%;
+  height: calc(100% - 30px);
+  position: fixed;
+  top: 30px;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: #fff;
+  z-index: 1;
+}
+
+header .navigate li {
+  margin-left: -110px;
+  line-height: 80px;
+}
+
+header .navigate ul {
+  margin-top: -600px;
+}
+
+header .navigate li a {
+  color: #111;
+  font-size: 1.6em;
+}
+
 .hamburger {
   color: #6070ff;
+  background-color: #6070ff;
+  position: relative;
+  width: 20px;
+  height: 19px;
+  background: url(./assets/Icons/hamm.png);
+  background-size: 30px ;
+  background-repeat: no-repeat;
+  background-position: center ;
+  cursor: pointer;
+}
+
+.hamburger.active {
+  background: url(./assets/Icons/icon2.png);
+  background-size: 25px;
+  background-repeat: no-repeat;
+  background-position: center;  
 }
 
 .navigation {
