--- a/style.css
+++ b/style.css
@@ -40,17 +40,17 @@ header .navigate {
 }
 
 header .navigate.active {
-  width: 375px;
-  height: 100vh;
   position: absolute;
-  top: 30px;
   left: 0;
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
-  background: #fff;
-  z-index: 1;
+  z-index: 100;
+  right: 0px;
+  top: 0px;
+  bottom: 0px;
+  background-color: #6070FF;
+  mix-blend-mode: multiply;
+  margin-top: 0;
 }
 
 li {
@@ -58,18 +58,22 @@ li {
   list-style-type: none;
 }
 
-header .navigate li {
-  margin-left: -110px;
-  line-height: 80px;
+.navigate_li {
+  margin-top: 75px !important;
 }
 
-header .navigate ul {
-  margin-top: -600px;
+header .navigate li {
+  line-height: 44px;
 }
 
 header .navigate li a {
-  color: #111;
-  font-size: 1.6em;
+  color: #fff;
+  font-size: 32px;
+  font-weight: 600;
+  font-family: "Poppins", Helvetica, Arial, Verdana, Tahoma, sans-serif;
+  font-style: normal;
+  text-decoration: none;
+  z-index: 2;
 }
 
 .hamburger {
@@ -85,10 +89,17 @@ header .navigate li a {
 }
 
 .hamburger.active {
-  background: url(./assets/Icons/closeicon.png);
+  background: url(./assets/Icons/Icon1.png);
   background-size: 25px;
   background-repeat: no-repeat;
   background-position: center;
+  margin-top: 20px;
+  z-index: 300;
+}
+
+
+.greyed_out {
+  filter: blur(3px);
 }
 
 .imgdiv {
