--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 #modal {
-  background-color: #fff; 
-  position: absolute ;
+  background-color: #fff;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -13,13 +13,13 @@
   width: 49%;
   height: 95%;
   animation-name: animatemodal;
-  animation-duration: .4s;
+  animation-duration: 0.4s;
 }
 
 #close-btn {
   cursor: pointer;
   font-size: 3rem;
-  color: #ff0000;
+  color: #f00;
 }
 
 #modal-container {
@@ -30,7 +30,7 @@
   width: 100%;
   height: 100%;
   z-index: 1;
-  background-color: rgba(0,0,0, .2 );
+  background-color: rgba(0,0,0,0.2);
 }
 
 @keyframes animatemodal {
