--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@
   width: 100%;
   height: 100%;
   z-index: 1;
-  background-color: rgba(0,0,0,0.2);
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 @keyframes animatemodal {
@@ -42,5 +42,5 @@
   to {
     top: 50%;
     opacity: 1;
-  }  
+  }
 }
