--- a/modal.css
+++ b/modal.css
@@ -10,10 +10,12 @@
   /* display: flex;
   justify-content: space-between; */
   /* align-items: center; */
-  width: 49%;
+  /* width: 49%; */
   height: 95%;
   animation-name: animatemodal;
   animation-duration: 0.4s;
+  height: 90%;
+  overflow-y:scroll;
 }
 
 #close-btn {
@@ -33,6 +35,23 @@
   background-color: rgba(0, 0, 0, 0.2);
 }
 
+.modal-headers {
+  margin: 3px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal-close-icon {
+  cursor: pointer;
+  width: 15px;
+  height: 12px;
+  margin-top: 3px;
+}
+
+.modal-skills {
+  margin-top: -8px;
+}
+
 @keyframes animatemodal {
   from {
     top: -300%;
@@ -42,5 +61,22 @@
   to {
     top: 50%;
     opacity: 1;
+  }
+}
+
+@media (max-width: 375px) {
+
+  #modal {
+    width: 80%;
+    margin: auto;
+  }
+
+  .flex-modal-button {
+    display: flex;
+    justify-content: space-around;
+}
+
+  .desktop-modal-btn {
+    width: 20%;
   }
 }
