--- a/modal.css
+++ b/modal.css
@@ -15,7 +15,7 @@
   animation-name: animatemodal;
   animation-duration: 0.4s;
   height: 90%;
-  overflow-y:scroll;
+  overflow-y: scroll;
 }
 
 #close-btn {
@@ -65,7 +65,6 @@
 }
 
 @media (max-width: 375px) {
-
   #modal {
     width: 80%;
     margin: auto;
@@ -74,9 +73,26 @@
   .flex-modal-button {
     display: flex;
     justify-content: space-around;
-}
+  }
 
-  .desktop-modal-btn {
-    width: 20%;
+  .mobile-btn-parent {
+    display: flex;
+    justify-content: center;
+    width: 38%;
+    /* padding: 1px; */
+    border: 0.1px solid #6070ff;
+    border-radius: 5px;
+    color: #6070ff;
+    background-color: #fff;
+    font-size: medium;
+  }
+
+  .mobile-btn-parent a {
+    text-decoration: none;
+  }
+
+  .modalicon1 {
+    width: 19px;
+    padding: 5px;
   }
 }
